Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<div class="landingpage">
+<html>
+  <head>
+    <title>
+      <body>
+        <div class="landingpage">
   <div class="navbar">
     <a class="navlogo">GASLUR</a>
     <button class="hamburger">
@@ -263,3 +267,5 @@
     <p>Copyright 2021 Gaslur</p>
   </div>
 </div>
+        
+    
